--- a/.github/workflows/sync_leetcode.yml
+++ b/.github/workflows/sync_leetcode.yml
@@ -6,8 +6,8 @@ on:
     - cron: "0 8 * * 6"
 
 permissions:
-  contents: write
-  
+  contents: write   
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,7 +16,8 @@ jobs:
       - name: Sync
         uses: joshcai/leetcode-sync@v1.5
         with:
-          github-token: ${{ github.token }}
+          github-token: ${{ secrets.GITHUB_TOKEN }} 
           leetcode-csrf-token: ${{ secrets.LEETCODE_CSRF_TOKEN }}
           leetcode-session: ${{ secrets.LEETCODE_SESSION }}
           destination-folder: my-folder
+
